# axiom_mlops_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  axiom-mlops.code-workspace  constraints.txt  cookiecutter.json  justfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.gemini/: config.yaml
.github/actions/setup/: action.yml
.github/rulesets/: main.json
.github/workflows/: check.yml  publish.yml
hooks/: post_gen_project.py
notebooks/: experiment_01.ipynb
src/: main.py
src/axiom_mlops_project/: api.py  config_template.py  explanations.py  infrastructure.py  interface.py  lineage.py  main.py  services.py
src/axiom_mlops_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/axiom_mlops_project/jobs/: monitoring.py
tasks/: check.just
tests/: test_main.py  test_template.py
wandb/: latest-run
wandb/run-20260406_205339-rxc3vf9r/: run-rxc3vf9r.wandb
wandb/run-20260406_205339-rxc3vf9r/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
