[project]
name = "axiom-mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mypy>=1.20.0",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "pdoc>=16.0.0",
    "pydantic>=2.12.5",
    "ruff>=0.15.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
check = ["bandit>=1.9.4"]
commit = [
    "commitizen>=4.13.9",
    "pre-commit>=4.5.1",
]
dev = [
    "bandit>=1.9.4",
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__main__.py"]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]

[tool.ruff]
# Set the maximum line length to 100 as suggested for modern screens
line-length = 100

[tool.ruff.format]
# Enable formatting of code snippets within docstrings
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
# Ensure our Google-style docstrings are enforced
convention = "google"
